<resources>
    <string name="app_name">LoginSignup</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txt_login">Log In</string>
    <string name="txt_signup">Sign UP</string>
    <string name="txt_google">Continue with Google</string>
    <string name="txt_facebook">Continue with Facebook</string>
    <string name="txt_signup2">SIGN UP</string>
    <string name="txt_username">UserName</string>
    <string name="txt_email">E-mail</string>
    <string name="txt_password">Password</string>
    <string name="txt_cfpassword">Confirm Password</string>
    <string name="txt_ok">OK</string>
    <string name="txt_login2">LOGIN</string>
    <string name="txt_fgpassword">Forgot Your Password?</string>
    <string name="txt_send">寄送</string>
    <string name="txt_verificationcode">Verification Code</string>
    <string name="txt_verificationcode2">請輸入驗證碼</string>
    <string name="txt_resetpassword">Reset Password</string>
    <string name="txt_signout">登出</string>
</resources>