<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".LogInFragment">

    <data>
        <variable
            name="viewModel"
            type="com.example.loginsignup.LogInViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_login"
            android:layout_width="233dp"
            android:layout_height="98dp"
            android:layout_marginTop="148dp"
            android:text="@string/txt_login2"
            android:textSize="80sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/et_login_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="70dp"
            android:layout_marginEnd="50dp"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:text="@={viewModel.email}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_login" />

        <EditText
            android:id="@+id/et_login_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:ems="10"
            android:inputType="textPassword"
            android:text="@={viewModel.password}"
            app:layout_constraintEnd_toEndOf="@+id/et_login_email"
            app:layout_constraintStart_toStartOf="@+id/et_login_email"
            app:layout_constraintTop_toBottomOf="@+id/et_login_email" />

        <Button
            android:id="@+id/b_login_ok"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/txt_ok"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="@+id/et_login_password"
            app:layout_constraintStart_toStartOf="@+id/et_login_password"
            app:layout_constraintTop_toBottomOf="@+id/et_login_password" />

        <Button
            android:id="@+id/b_login_fgpassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/txt_fgpassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/b_login_ok" />

        <TextView
            android:id="@+id/tv_login_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_email"
            app:layout_constraintBottom_toTopOf="@+id/et_login_email"
            app:layout_constraintStart_toStartOf="@+id/et_login_email" />

        <TextView
            android:id="@+id/tv_login_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_password"
            app:layout_constraintBottom_toTopOf="@+id/et_login_password"
            app:layout_constraintStart_toStartOf="@+id/et_login_password" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>